# modern-cmake-cpp-starter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/include/: example.hpp
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/greeter/: greeter.hpp
lib/src/: greeter.cpp
test/: CMakeLists.txt  greeter_test.cpp
